# NetworkLibrary

./: .gitignore  CMakeLists.txt  FindPolymorphNetworkLibrary.cmake  readme.md
cmake/: FindAsio.cmake
docs/: DTO.md  TCP.md  UDP.md
examples/tcpEcho/: MessageDto.hpp  echoClient.cpp  echoServer.cpp
examples/udpEcho/: MessageDto.hpp  echoClient.cpp  echoServer.cpp
include/Polymorph/Network/: DtoHandler.hpp  Packet.hpp  PacketHeader.hpp  SerializerTrait.hpp  SessionStore.hpp  types.hpp
include/Polymorph/Network/dto/: ACKDto.hpp  ConnectionDto.hpp  ConnectionResponseDto.hpp  SessionTransferRequestDto.hpp  SessionTransferResponseDto.hpp
include/Polymorph/Network/exceptions/: DeserializingException.hpp  UnauthorizedException.hpp  UnknownEndpointException.hpp  UnknownSessionException.hpp  UnkonownSessionException.hpp
include/Polymorph/Network/tcp/: APacketHandler.hpp  Client.hpp  ConnectionPool.hpp  IConnectionPool.hpp  IPacketHandler.hpp  Server.hpp
include/Polymorph/Network/udp/: APacketHandler.hpp  Client.hpp  Connector.hpp  IClientConnection.hpp  IPacketHandler.hpp  PacketStore.hpp  Server.hpp  ServerPacketManager.hpp
include/polymorph/network/: Packet.hpp  PacketHeader.hpp  SerializerTrait.hpp  SessionStore.hpp  types.hpp
include/polymorph/network/dto/: ACKDto.hpp  ConnectionDto.hpp  ConnectionResponseDto.hpp  DisconnectionDto.hpp  SessionTransferRequestDto.hpp  SessionTransferResponseDto.hpp
include/polymorph/network/exceptions/: AlreadyRegisteredException.hpp  UnknownAuthorizationKeyException.hpp
include/polymorph/network/tcp/: APacketHandler.hpp  Client.hpp  ClientImpl.hpp  ConnectionPool.hpp  IConnectionPool.hpp  IPacketHandler.hpp  PacketHandler.hpp  Server.hpp  ServerImpl.hpp
include/polymorph/network/udp/: AConnector.hpp  APacketHandler.hpp  Client.hpp  ClientImpl.hpp  Connector.hpp  IPacketHandler.hpp  Server.hpp  ServerImpl.hpp  ServerPacketManager.hpp
src/include/: SessionStore.hpp  authorizationKey.hpp
src/include/tcp/: ClientConnection.hpp  ClientImpl.hpp  ConnectionPool.hpp  IClientConnection.hpp  IConnectionPool.hpp  IPacketReceiver.hpp  PacketHandler.hpp  ServerImpl.hpp
src/include/udp/: AConnector.hpp  APacketHandler.hpp  ClientImpl.hpp  IPacketReceiver.hpp  PacketStore.hpp  SafePacketManager.hpp  ServerImpl.hpp  ServerPacketManager.hpp
src/src/: SessionStore.cpp  authorizationKey.cpp
src/src/tcp/: APacketHandler.cpp  Client.cpp  ClientConnection.cpp  ClientImpl.cpp  ConnectionPool.cpp  PacketHandler.cpp  Server.cpp  ServerImpl.cpp
src/src/udp/: AConnector.cpp  APacketHandler.cpp  Client.cpp  ClientImpl.cpp  Connector.cpp  PacketStore.cpp  Server.cpp  ServerImpl.cpp  ServerPacketManager.cpp
tests/: CMakeLists.txt  main.cpp
tests/e2e-tests/: utils.hpp
tests/e2e-tests/session-transfer/: TcpToUdp.cpp  UdpToTcp.cpp
tests/e2e-tests/tcp/: ClientPrematureShutdown.cpp  ClientSend.cpp  ServerPrematureShutdown.cpp  ServerSend.cpp
tests/e2e-tests/udp/: ClientPrematureShutdown.cpp  ClientSend.cpp  ServerPrematureShutdown.cpp  ServerSend.cpp  utils.hpp
tests/unit-tests/: AuthKey.cpp  DtoHandler.cpp  SerializerTrait.cpp  ServerPacketManager.cpp  SessionStore.cpp
